--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -9,11 +9,24 @@
     <title>Languages rules comparison</title>
 </head>
 <body>
-    <h1>Languages rules comparison</h1>
-   
+    <div class="mt-3 row no-gutters align-items-top">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-11">
+            <h1>Languages rules comparison</h1>
+        </div>
+    </div>
     <form action="publish_rules" method="POST" class="mb-2 needs-validation" novalidate>
-        <p>Select the languages to compare </p>
+        <div class="mt-3 row no-gutters align-items-top">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-11">
+                <p>Select the languages to compare </p>
+            </div>
+        </div>
         <div class="mt-3 row no-gutters align-items-center">
+            <div class="col-md-1">
+            </div>
             <div id="step2-2" class="col-4 input-group mr-2">
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="language-1-addon">First language</span>
@@ -38,22 +51,29 @@
                     <option value="otomi">Mezquital Otomi</option>
                 </select>
             </div>
+            <div id="step4" class="col-auto">
+                <button class="btn btn-success" type="submit">Show</button>
+            </div>
         </div>
-        <div id="step4" class="col-auto">
-            <button class="btn btn-success" type="submit">Show</button>
-        </div>
+        
     </form>
-    <div class="row">
-        <div class="column">
-            <div style="height:360px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;white-space: pre;">
-                <p>{{rules_lang_1}}</p>
+    <div class="mt-3 row no-gutters align-items-top">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-5">
+            <h1> {{lang_1}}</h1>
+            <div class="scrollable0panel">
+                <p>{{rules_lang_1 | safe}}</p>
             </div>
         </div>
-        <div class="column">
-            <div style="height:360px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;white-space: pre;">
-                <p>{{rules_lang_2}}</p>
+        <div class="col-md-5">
+            <h1> {{lang_2}}</h1>
+            <div class="scrollable0panel">
+                <p>{{rules_lang_2 | safe}}</p>
             </div>
         </div>
-    </div> 
+        <div class="col-md-1">
+        </div>
+    </div>
 </body>
 </html>
