--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-    
+
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <title>Languages rules comparison</title>
@@ -22,7 +22,7 @@
             <div class="col-md-1">
             </div>
             <div class="col-md-11">
-                <p>Select the languages to compare </p>
+                <p style='font-size: 1.1em;'>Select the languages to compare </p>
             </div>
         </div>
         <div class="mt-3 row no-gutters align-items-center">
@@ -53,12 +53,12 @@
                 </select>
             </div>
             <div id="step4" class="col-auto">
-                <button class="btn btn-success" type="submit">Show</button>
+                <button class="btn btn-success" type="submit" style="background-color: #1572A1;">Show</button>
             </div>
         </div>
-        
+
     </form>
-    <div class="mt-3 row no-gutters align-items-top">
+    <div class="mt-3 row no-gutters align-items-top" >
         <div class="col-md-1">
         </div>
         <div class="col-md-5">
