--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,51 +10,50 @@
     <title>Languages rules comparison</title>
 </head>
 <body>
-    <div class="mt-3 row no-gutters align-items-top">
-        <div class="col-md-1">
-        </div>
-        <div class="col-md-11">
-            <h1>Languages rules comparison</h1>
-        </div>
-    </div>
     <form action="publish_rules" method="POST" class="mb-2 needs-validation" novalidate>
+        
         <div class="mt-3 row no-gutters align-items-top">
             <div class="col-md-1">
             </div>
-            <div class="col-md-11">
+            <div class="col-md-5">
+                <h1>Languages rules comparison</h1>
                 <p style='font-size: 1.1em;'>Select the languages to compare </p>
-            </div>
-        </div>
-        <div class="mt-3 row no-gutters align-items-center">
-            <div class="col-md-1">
-            </div>
-            <div id="step2-2" class="col-4 input-group mr-2">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="language-1-addon">First language</span>
+                <div id="step2-2" class="input-group mr-2">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="language-1-addon">First language</span>
+                    </div>
+                    <select id="language-selector-1" class="form-control" name="language1">
+                        <option value="english">English</option>
+                        <option value="german">German</option>
+                        <option value="swedish">Swedish</option>
+                        <option value="finnish">Finnish</option>
+                        <option value="karelian">Karelian</option>
+                        <option value="otomi">Mezquital Otomi</option>
+                    </select>
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="language-2-addon">Second language</span>
+                    </div>
+                    <select id="language-selector-2" class="form-control" name="language2">
+                        <option value="english">English</option>
+                        <option value="german">German</option>
+                        <option value="swedish">Swedish</option>
+                        <option value="finnish">Finnish</option>
+                        <option value="karelian">Karelian</option>
+                        <option value="otomi">Mezquital Otomi</option>
+                    </select>
+                    <button class="btn btn-success" type="submit" style="background-color: #1572A1;">Show</button>
                 </div>
-                <select id="language-selector-1" class="form-control" name="language1">
-                    <option value="english">English</option>
-                    <option value="german">German</option>
-                    <option value="swedish">Swedish</option>
-                    <option value="finnish">Finnish</option>
-                    <option value="karelian">Karelian</option>
-                    <option value="otomi">Mezquital Otomi</option>
-                </select>
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="language-2-addon">Second language</span>
-                </div>
-                <select id="language-selector-2" class="form-control" name="language2">
-                    <option value="english">English</option>
-                    <option value="german">German</option>
-                    <option value="swedish">Swedish</option>
-                    <option value="finnish">Finnish</option>
-                    <option value="karelian">Karelian</option>
-                    <option value="otomi">Mezquital Otomi</option>
-                </select>
             </div>
-            <div id="step4" class="col-auto">
-                <button class="btn btn-success" type="submit" style="background-color: #1572A1;">Show</button>
-            </div>
+            <div class="col-md-1"> </div>
+            <div class="col-md-4">
+            <fieldset class="border border-info rounded border-width:3px" >
+            <div>
+            <h3 style="text-align: center; color:#54BAB9"> Legend </h3>
+            <p style="white-space: pre-wrap; padding-left: 10px; padding-right: 10px">
+The inflections for each language chosen are displayed below, classified into morphological rules. 
+Suffixes have a "-" sign preceding each inflection. 
+Prefixes have a "-" sign following each inflection. 
+Similar inflections across two languages are shown in <t style="color:#9C0F48">red</t>.</p></div> </fieldset> </div>
         </div>
     </form>
     <div class="mt-3 row no-gutters align-items-top" >
@@ -79,14 +78,15 @@
         <div class="col-md-1">
         </div>
         <div class="col-md-11">
-            <p style="font-size:30px;white-space: pre-wrap;">{{rules_percent}}</p>
+            <p style="font-size:20px;white-space: pre-wrap;">{{rules_percent}}</p>
         </div>
     </div>
     <div class="mt-3 row no-gutters align-items-top">
         <div class="col-md-1">
         </div>
         <div class="col-md-9">
-            <p style="font-size:30px;white-space: pre-wrap;">Example guessed analogies a:b as c:d from {{lang_2}} by model trained on {{lang_1}}</p>
+            {% if analogies_examples is defined and analogies_examples|length > 0 %}
+            <p style="font-size:20px;white-space: pre-wrap;">Example of analogies guessed by our model trained on {{lang_1}} and applied on {{lang_2}}:</p>
             <table id="analogies" class="table table-sm table-bordered table-striped">
                 <thead>
                     <tr>
@@ -107,6 +107,7 @@
                 {% endfor %}
                 </tbody>
             </table>
+            {% endif %}
         </div>
     </div>
 </body>
