Add reference to inflection

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -50,7 +50,7 @@
             <div>
             <h3 style="text-align: center; color:#54BAB9"> Legend </h3>
             <p style="white-space: pre-wrap; padding-left: 10px; padding-right: 10px">
-The inflections for each language chosen are displayed below, classified into morphological rules. 
+The <a href="https://en.wikipedia.org/wiki/Inflection" target="_blank" rel="noopener noreferrer">inflections</a> for each language chosen are displayed below, classified into morphological rules. 
 Suffixes have a "-" sign preceding each inflection. 
 Prefixes have a "-" sign following each inflection. 
 Similar inflections across two languages are shown in <t style="color:#9C0F48">red</t>.</p></div> </fieldset> </div>
@@ -90,10 +90,10 @@ Similar inflections across two languages are shown in <t style="color:#9C0F48">r
             <table id="analogies" class="table table-sm table-bordered table-striped">
                 <thead>
                     <tr>
-                        <th scope="col">a</th>
-                        <th scope="col">b</th>
-                        <th scope="col">c</th>
-                        <th scope="col">d</th>
+                        <th scope="col">Lemma 1</th>
+                        <th scope="col">Inflected form 1</th>
+                        <th scope="col">Lemma 2</th>
+                        <th scope="col">Inflected form 2</th>
                     </tr>
                 </thead>
                 <tbody>
